--- a/template.html
+++ b/template.html
@@ -1,48 +1,40 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Codebeautify.org Text to HTML Converter</title>
-	</head>
-	<body>
-		<p>
-			<p>
-				<span>Hi Dev Team</span>
-			</p>
-			<div>&nbsp;</div>
-			<div>This is
-				<span style="font-family: arial, sans-serif;">&nbsp;</span>
-				<span style="color: #ff0000;">
-					<strong>
-						<span style="font-family: arial, sans-serif;">The Alert</span>
-					</strong>&nbsp;
-				</span>for High disk usage. Please find the details given below
-			</div>
-			<div>&nbsp;</div>
-			<div>
-				<span style="color: #ff0000; font-family: 'arial black', sans-serif; font-size: large;">Body</span>
-			</div>
-			<div>&nbsp;</div>
-			<div>
-				<span class="gmail_signature_prefix">--</span>
-				<br />
-				<div class="gmail_signature" dir="ltr" data-smartmail="gmail_signature">
-					<div dir="ltr">
-						<div dir="ltr">
-							<div>
-								<em>
-									<span>With Best Regards,</span>
-								</em>
-							</div>
-							<div>
-								
-								<em>
-									<span>Monitoring Team</span>
-								</em>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</p>
-	</body>
-</html>
+<p>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">Hello TO_TEAM,</span>
+    </strong>
+  </p>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">&nbsp;</span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">There is an&nbsp; <span style="color: #ff0000;">ALERT_TYPE</span>&nbsp;in the system. Please find the details below and take appropriate action. </span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">&nbsp;</span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="color: #ff0000; font-family: verdana, sans-serif; font-size: large;">BODY</span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">&nbsp;</span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">Regards,</span>
+    </strong>
+  </div>
+  <div>
+    <strong>
+      <span style="font-family: verdana, sans-serif;">Monitoring Team</span>
+    </strong>
+  </div>
